# gen-art-framework

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  cli.md  distributions.md  writing-scripts.md
src/gen_art_framework/: __init__.py  cli.py  distributions.py  executor.py  schema.py
src/gen_art_framework/examples/: circles.py  flow_field.py
tests/: test_cli.py  test_distributions.py  test_executor.py  test_schema.py
